--- a/Web.config
+++ b/Web.config
@@ -6,7 +6,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Database1ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
+    <add name="Database1ConnectionString" connectionString="Data Source=tcp:healthylifestyleprojectdbserver.database.windows.net,1433;Initial Catalog=HealthyLifestyleProject26012019Learn_db;User Id=fl1pflop@healthylifestyleprojectdbserver;Password=qWE03oFf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
